Fix bootstrap layout issue

--- a/wayfarer/src/app/city-info/city-info.component.css
+++ b/wayfarer/src/app/city-info/city-info.component.css
@@ -1,20 +1,12 @@
-.container{
+.container {
   background-color: #E6E6FA;
-  height: 100vh;
   border-radius: 25px;
-  /* flex: 2; */
   padding: 20px;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: calc(100vh - 170px); */
-  /* overflow: auto; */
+  max-height: 100%;
 }
 
 /* Styles for city header section */
 #city-header {
-  /* display: flex;
-  justify-content: space-between; */
   margin-bottom: 20px;
 }
 
@@ -132,7 +124,7 @@
   font-weight: 500;
 }
 
-.posts {
+#posts {
   flex: 1;
   display: flex;
   flex-direction: column;
