--- a/wayfarer/src/app/home/home.component.css
+++ b/wayfarer/src/app/home/home.component.css
@@ -4,16 +4,9 @@
 }
 
 #city-list{
-    /* background: linear-gradient(to bottom, #E0F2FF, #FFFFFF); */
     background-color: #B0E0E6;
     margin-right: 3%;
-    height: 100vh;
+    max-height: 100%;
     border-radius: 25px;
     padding-top: 25px;
 }
-
-/* #city-info{
-    background-color: #E6E6FA;
-    height: 100vh;
-    border-radius: 25px;
-} */
